<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/name_menu_info_sort_tabs" />
        <item
            android:id="@+id/nav_bond"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/name_menu_bond" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/name_menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/name_menu_info" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_open_in_new_black_24dp"
                android:title="@string/name_menu_more_app" />
        </menu>
    </item>

</menu>
