<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="#d9d9d9">



    <TextView
        android:id="@+id/info_app"

        android:layout_width="256dp"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"

        android:layout_marginLeft="10dp"


        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/about_app"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/info_app_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_app"

        android:layout_centerInParent="true"
        android:layout_marginTop="7dp"
        android:layout_marginRight="20dp"
        android:autoLink="web"
        android:text="@string/nbu_link"
        android:textColor="#7e4c19"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nast_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="199dp"

        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            android:textSize="14sp"
            android:lineSpacingExtra="8dp"
            android:text="@string/about_finance_time"
            android:padding="@dimen/activity_horizontal_margin"
            />
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>

